# device_logger

./: .gitignore  Cargo.toml
logs/: 2025-04-08-x86_64-unknown-linux-gnu_log.json  2025-04-10_ZENS-Desktop_Linux (CachyOS Linux rolling).json
src/: cli.rs  client.rs  comm.rs  log.rs  main.rs  server.rs
src/logs/: 2025-04-08-x86_64-unknown-linux-gnu_log.json  2025-04-09_ZENS-Desktop_Linux (CachyOS Linux rolling).json  2025-04-09_ZENS-Desktop_Linux (CachyOS Linux rolling)_log.json  2025-04-10_ZENS-Desktop_Linux (CachyOS Linux rolling).json  2025-04-11_ZENS-Desktop_Linux (CachyOS Linux rolling).json
ui/: app-window.slint
