[package]
name = "SuperTestForAndroid"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[lib]
#crate-type = ["cdylib", "lib"]

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = "4.5.35"
current_platform = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
slint = { version = "1.8.0", features = ["backend-android-activity-06"] }
sysinfo = { version = "0.34.2", features = ["serde"] }

[build-dependencies]
slint-build = "1.8.0"
